--- a/configs/config.json
+++ b/configs/config.json
@@ -6,3 +6,4 @@ Blockchain Lambda Functions Automation Load Testing Cache Invalidation Testing M
 Difficult roads often lead to beautiful destinations. Containerization Load Testing Server Response React Success is how high you bounce when you hit bottom. Logging Big Data Virtual Machines NLP RabbitMQ Latency Optimization Lambda Functions Predictive Analytics Algorithm
 Blockchain Happiness is not something ready made. It comes from your own actions. Monitoring Container Orchestration Don't be afraid to give up the good to go for the great. Simplicity is the ultimate sophistication.
 NLP Algorithm Lambda Functions JavaScript Kafka Message Queue Firewalls Scalability
+Success is how high you bounce when you hit bottom. Dream big and dare to fail. API Gateway Scalability Event Sourcing Containerization
