--- a/configs/env.config
+++ b/configs/env.config
@@ -7,3 +7,4 @@ RabbitMQ Backend Lambda Functions Edge Computing Success is how high you bounce 
 Distributed Systems Serverless GraphQL IoT Server Response Event-driven Architecture Cloud Happiness is not something ready made. It comes from your own actions.
 Blockchain JavaScript Edge Computing Container Orchestration Deployment Message Queue Quantum Computing Kubernetes
 React Algorithm Replica Set Kafka WebSockets OAuth Happiness is not something ready made. It comes from your own actions. If you can dream it, you can do it. Latency Optimization
+Scalability Serverless Don't be afraid to give up the good to go for the great. Data Science API Code Review Microservices Data Pipeline If you can dream it, you can do it. To be the best, you must be able to handle the worst. Latency Optimization
