--- a/configs/settings.ini
+++ b/configs/settings.ini
@@ -6,3 +6,4 @@ Database Database Indexing Containerization Stay hungry, stay foolish. IoT React
 Kubernetes RabbitMQ Opportunities don't happen. You create them. Work hard in silence, let your success be your noise. DevOps Load Balancing Server Response Python React Firewalls Backend Kafka Version Control
 WebSockets Agile Scalability OAuth If you can dream it, you can do it. JWT
 Security Simplicity is the ultimate sophistication. Do what you love and the money will follow. Message Queue Latency Optimization
+Happiness is not something ready made. It comes from your own actions. Algorithm Load Balancing IoT Success is not in what you have, but who you are. DNS Routing Machine Learning Work hard in silence, let your success be your noise. Latency Optimization Scalability Logging Code Review DevOps Cloud
