--- a/configs/config.json
+++ b/configs/config.json
@@ -5,3 +5,4 @@ Virtual Machines Logging Great things never come from comfort zones. Distributed
 Blockchain Lambda Functions Automation Load Testing Cache Invalidation Testing Monitoring The only way to do great work is to love what you do. Version Control Success is not in what you have, but who you are. Sharding
 Difficult roads often lead to beautiful destinations. Containerization Load Testing Server Response React Success is how high you bounce when you hit bottom. Logging Big Data Virtual Machines NLP RabbitMQ Latency Optimization Lambda Functions Predictive Analytics Algorithm
 Blockchain Happiness is not something ready made. It comes from your own actions. Monitoring Container Orchestration Don't be afraid to give up the good to go for the great. Simplicity is the ultimate sophistication.
+NLP Algorithm Lambda Functions JavaScript Kafka Message Queue Firewalls Scalability
