--- a/configs/settings.ini
+++ b/configs/settings.ini
@@ -5,3 +5,4 @@ Containerization Pull Request Event Sourcing Kubernetes DNS Routing Simplicity i
 Database Database Indexing Containerization Stay hungry, stay foolish. IoT React Latency Optimization Data Science Great things never come from comfort zones. Zero Downtime Deployment Machine Learning JavaScript Optimization
 Kubernetes RabbitMQ Opportunities don't happen. You create them. Work hard in silence, let your success be your noise. DevOps Load Balancing Server Response Python React Firewalls Backend Kafka Version Control
 WebSockets Agile Scalability OAuth If you can dream it, you can do it. JWT
+Security Simplicity is the ultimate sophistication. Do what you love and the money will follow. Message Queue Latency Optimization
