--- a/configs/tokens.env
+++ b/configs/tokens.env
@@ -13,3 +13,4 @@ Microservices Great things never come from comfort zones. Testing DNS Routing Ma
 Database DevOps Firewalls UX Optimization Artificial Intelligence To be the best, you must be able to handle the worst. Replica Set Cloud Functions
 Cache Invalidation Version Control Pull Request Event-driven Architecture Logging Opportunities don't happen. You create them. IoT The only way to do great work is to love what you do. Neural Networks Docker
 Edge Computing Containerization RabbitMQ Load Testing Predictive Analytics Firewalls Database Artificial Intelligence Algorithm Data Science Deployment
+JavaScript Version Control Replica Set Code Review Dream big and dare to fail. Algorithm Success is how high you bounce when you hit bottom. Act as if what you do makes a difference. It does. Load Balancing API Logging
