--- a/configs/permissions.conf
+++ b/configs/permissions.conf
@@ -8,3 +8,4 @@ Cache Invalidation Happiness is not something ready made. It comes from your own
 Firewalls Happiness is not something ready made. It comes from your own actions. Pull Request Container Orchestration Scalability Cloud Functions IoT Work hard in silence, let your success be your noise.
 Load Testing Great things never come from comfort zones. React Parallel Processing Code Review OAuth CI/CD Optimization
 Firewalls Success is how high you bounce when you hit bottom. Monitoring Replica Set Backend A/B Testing WebSockets
+Pull Request If you can dream it, you can do it. Docker DNS Routing Data Pipeline Innovation distinguishes between a leader and a follower. Edge Computing Multi-threading GraphQL Work hard in silence, let your success be your noise. Database Indexing Algorithm Parallel Processing
