--- a/configs/env.config
+++ b/configs/env.config
@@ -5,3 +5,4 @@ Version Control CI/CD Monitoring Scalability Cloud Dream big and dare to fail. H
 Do what you love and the money will follow. Version Control DNS Routing Virtual Machines Distributed Systems Success is not in what you have, but who you are. If you can dream it, you can do it. Message Queue Kafka RabbitMQ
 RabbitMQ Backend Lambda Functions Edge Computing Success is how high you bounce when you hit bottom. Machine Learning Testing IoT Innovation distinguishes between a leader and a follower. Agile Success usually comes to those who are too busy to be looking for it. Data Pipeline
 Distributed Systems Serverless GraphQL IoT Server Response Event-driven Architecture Cloud Happiness is not something ready made. It comes from your own actions.
+Blockchain JavaScript Edge Computing Container Orchestration Deployment Message Queue Quantum Computing Kubernetes
