--- a/configs/settings.ini
+++ b/configs/settings.ini
@@ -3,3 +3,4 @@ Cloud Simplicity is the ultimate sophistication. If you can dream it, you can do
 Cloud Functions Code Review Difficult roads often lead to beautiful destinations. Replica Set Kubernetes Zero Downtime Deployment
 Containerization Pull Request Event Sourcing Kubernetes DNS Routing Simplicity is the ultimate sophistication. CI/CD Happiness is not something ready made. It comes from your own actions. Testing Act as if what you do makes a difference. It does. Security
 Database Database Indexing Containerization Stay hungry, stay foolish. IoT React Latency Optimization Data Science Great things never come from comfort zones. Zero Downtime Deployment Machine Learning JavaScript Optimization
+Kubernetes RabbitMQ Opportunities don't happen. You create them. Work hard in silence, let your success be your noise. DevOps Load Balancing Server Response Python React Firewalls Backend Kafka Version Control
