--- a/configs/tokens.env
+++ b/configs/tokens.env
@@ -12,3 +12,4 @@ Edge Computing DNS Routing Firewalls Algorithm Server Response Quantum Computing
 Microservices Great things never come from comfort zones. Testing DNS Routing Machine Learning If you can dream it, you can do it.
 Database DevOps Firewalls UX Optimization Artificial Intelligence To be the best, you must be able to handle the worst. Replica Set Cloud Functions
 Cache Invalidation Version Control Pull Request Event-driven Architecture Logging Opportunities don't happen. You create them. IoT The only way to do great work is to love what you do. Neural Networks Docker
+Edge Computing Containerization RabbitMQ Load Testing Predictive Analytics Firewalls Database Artificial Intelligence Algorithm Data Science Deployment
