--- a/configs/tokens.env
+++ b/configs/tokens.env
@@ -10,3 +10,4 @@ Success usually comes to those who are too busy to be looking for it. JavaScript
 Multi-threading Cloud Functions Version Control JWT NLP Neural Networks Artificial Intelligence Success is how high you bounce when you hit bottom. Framework Act as if what you do makes a difference. It does.
 Edge Computing DNS Routing Firewalls Algorithm Server Response Quantum Computing Performance Database Blockchain DevOps Load Balancing React JWT Success doesn’t just find you. You have to go out and get it. Big Data
 Microservices Great things never come from comfort zones. Testing DNS Routing Machine Learning If you can dream it, you can do it.
+Database DevOps Firewalls UX Optimization Artificial Intelligence To be the best, you must be able to handle the worst. Replica Set Cloud Functions
