--- a/configs/settings.ini
+++ b/configs/settings.ini
@@ -1,3 +1,4 @@
 Machine Learning Big Data Containerization CI/CD Neural Networks NLP
 Cloud Simplicity is the ultimate sophistication. If you can dream it, you can do it. Do what you love and the money will follow. Container Orchestration Database Indexing
 Cloud Functions Code Review Difficult roads often lead to beautiful destinations. Replica Set Kubernetes Zero Downtime Deployment
+Containerization Pull Request Event Sourcing Kubernetes DNS Routing Simplicity is the ultimate sophistication. CI/CD Happiness is not something ready made. It comes from your own actions. Testing Act as if what you do makes a difference. It does. Security
