--- a/configs/docker-compose.yml
+++ b/configs/docker-compose.yml
@@ -4,3 +4,4 @@ GraphQL Kafka Artificial Intelligence Backend Simplicity is the ultimate sophist
 Event Sourcing Optimization JWT The only way to do great work is to love what you do. Scalability Virtual Machines Python Cloud Do what you love and the money will follow.
 Framework If you can dream it, you can do it. GraphQL Firewalls Simplicity is the ultimate sophistication. Difficult roads often lead to beautiful destinations.
 Server Response Work hard in silence, let your success be your noise. NLP Lambda Functions Replica Set API Gateway Distributed Systems The only way to do great work is to love what you do. Optimization Big Data
+To be the best, you must be able to handle the worst. Firewalls Quantum Computing Lambda Functions Success is how high you bounce when you hit bottom. Database Indexing Act as if what you do makes a difference. It does. DNS Routing Pull Request Performance
