--- a/configs/config.json
+++ b/configs/config.json
@@ -3,3 +3,4 @@ Pull Request Success doesn’t just find you. You have to go out and get it. Lambd
 Sharding Success doesn’t just find you. You have to go out and get it. Security Python UX Optimization DNS Routing Microservices Don't be afraid to give up the good to go for the great. Load Testing Virtual Machines Containerization Zero Downtime Deployment
 Virtual Machines Logging Great things never come from comfort zones. Distributed Systems Firewalls Docker IoT Blockchain API
 Blockchain Lambda Functions Automation Load Testing Cache Invalidation Testing Monitoring The only way to do great work is to love what you do. Version Control Success is not in what you have, but who you are. Sharding
+Difficult roads often lead to beautiful destinations. Containerization Load Testing Server Response React Success is how high you bounce when you hit bottom. Logging Big Data Virtual Machines NLP RabbitMQ Latency Optimization Lambda Functions Predictive Analytics Algorithm
