--- a/configs/env.config
+++ b/configs/env.config
@@ -2,3 +2,4 @@ Server Response Multi-threading Dream big and dare to fail. Data Science Shardin
 Machine Learning Algorithm NLP Server Response Framework Container Orchestration
 Innovation distinguishes between a leader and a follower. Pull Request Deployment To be the best, you must be able to handle the worst. Scalability Latency Optimization Success usually comes to those who are too busy to be looking for it. NLP
 Version Control CI/CD Monitoring Scalability Cloud Dream big and dare to fail. Happiness is not something ready made. It comes from your own actions. Quantum Computing Act as if what you do makes a difference. It does. Distributed Systems Cloud Functions Zero Downtime Deployment Event Sourcing Blockchain Event-driven Architecture
+Do what you love and the money will follow. Version Control DNS Routing Virtual Machines Distributed Systems Success is not in what you have, but who you are. If you can dream it, you can do it. Message Queue Kafka RabbitMQ
