--- a/configs/permissions.conf
+++ b/configs/permissions.conf
@@ -7,3 +7,4 @@ RabbitMQ Docker Act as if what you do makes a difference. It does. Replica Set S
 Cache Invalidation Happiness is not something ready made. It comes from your own actions. Security Innovation distinguishes between a leader and a follower. Zero Downtime Deployment Kafka Parallel Processing React
 Firewalls Happiness is not something ready made. It comes from your own actions. Pull Request Container Orchestration Scalability Cloud Functions IoT Work hard in silence, let your success be your noise.
 Load Testing Great things never come from comfort zones. React Parallel Processing Code Review OAuth CI/CD Optimization
+Firewalls Success is how high you bounce when you hit bottom. Monitoring Replica Set Backend A/B Testing WebSockets
