--- a/configs/docker-compose.yml
+++ b/configs/docker-compose.yml
@@ -2,3 +2,4 @@ Difficult roads often lead to beautiful destinations. Scalability IoT Security E
 Big Data Opportunities don't happen. You create them. Success is how high you bounce when you hit bottom. Algorithm Difficult roads often lead to beautiful destinations. Multi-threading
 GraphQL Kafka Artificial Intelligence Backend Simplicity is the ultimate sophistication. Cloud Event Sourcing Optimization Kubernetes Dream big and dare to fail. Edge Computing
 Event Sourcing Optimization JWT The only way to do great work is to love what you do. Scalability Virtual Machines Python Cloud Do what you love and the money will follow.
+Framework If you can dream it, you can do it. GraphQL Firewalls Simplicity is the ultimate sophistication. Difficult roads often lead to beautiful destinations.
