--- a/configs/tokens.env
+++ b/configs/tokens.env
@@ -6,3 +6,4 @@ Backend Replica Set If you can dream it, you can do it. DevOps Success is how hi
 Machine Learning Algorithm Database Deployment Blockchain Logging Innovation distinguishes between a leader and a follower. Agile
 Load Balancing Success is how high you bounce when you hit bottom. Success usually comes to those who are too busy to be looking for it. Blockchain Dream big and dare to fail. JWT Microservices Event-driven Architecture
 Data Pipeline Opportunities don't happen. You create them. Framework Performance Backend Data Science Success is not in what you have, but who you are. Database Indexing UX Optimization API Gateway Cloud Functions
+Success usually comes to those who are too busy to be looking for it. JavaScript Load Balancing Pull Request Dream big and dare to fail. Do what you love and the money will follow. Edge Computing Frontend Artificial Intelligence NLP Version Control Neural Networks
