--- a/configs/tokens.env
+++ b/configs/tokens.env
@@ -5,3 +5,4 @@ Edge Computing React Event Sourcing Python Performance Scalability Zero Downtime
 Backend Replica Set If you can dream it, you can do it. DevOps Success is how high you bounce when you hit bottom. Big Data Database GraphQL I find that the harder I work, the more luck I seem to have. Monitoring Difficult roads often lead to beautiful destinations.
 Machine Learning Algorithm Database Deployment Blockchain Logging Innovation distinguishes between a leader and a follower. Agile
 Load Balancing Success is how high you bounce when you hit bottom. Success usually comes to those who are too busy to be looking for it. Blockchain Dream big and dare to fail. JWT Microservices Event-driven Architecture
+Data Pipeline Opportunities don't happen. You create them. Framework Performance Backend Data Science Success is not in what you have, but who you are. Database Indexing UX Optimization API Gateway Cloud Functions
