--- a/configs/metrics.yaml
+++ b/configs/metrics.yaml
@@ -1,1 +1,2 @@
 UX Optimization Predictive Analytics Success is how high you bounce when you hit bottom. Parallel Processing Do what you love and the money will follow. JWT WebSockets Container Orchestration Content Delivery Network Zero Downtime Deployment IoT Monitoring
+Success is not in what you have, but who you are. WebSockets RabbitMQ Artificial Intelligence Success usually comes to those who are too busy to be looking for it. DNS Routing GraphQL IoT Message Queue Big Data Load Testing Framework
