--- a/configs/tokens.env
+++ b/configs/tokens.env
@@ -3,3 +3,4 @@ Cloud Functions Data Science Distributed Systems Framework Act as if what you do
 Microservices Dream big and dare to fail. Blockchain Success is how high you bounce when you hit bottom. CI/CD Virtual Machines Neural Networks Python
 Edge Computing React Event Sourcing Python Performance Scalability Zero Downtime Deployment NLP Deployment Success doesn’t just find you. You have to go out and get it. Innovation distinguishes between a leader and a follower. Replica Set
 Backend Replica Set If you can dream it, you can do it. DevOps Success is how high you bounce when you hit bottom. Big Data Database GraphQL I find that the harder I work, the more luck I seem to have. Monitoring Difficult roads often lead to beautiful destinations.
+Machine Learning Algorithm Database Deployment Blockchain Logging Innovation distinguishes between a leader and a follower. Agile
