--- a/configs/permissions.conf
+++ b/configs/permissions.conf
@@ -5,3 +5,4 @@ Performance Happiness is not something ready made. It comes from your own action
 Code Review Load Balancing Predictive Analytics Automation IoT
 RabbitMQ Docker Act as if what you do makes a difference. It does. Replica Set Success doesn’t just find you. You have to go out and get it. Work hard in silence, let your success be your noise. Neural Networks Event Sourcing Python OAuth Virtual Machines
 Cache Invalidation Happiness is not something ready made. It comes from your own actions. Security Innovation distinguishes between a leader and a follower. Zero Downtime Deployment Kafka Parallel Processing React
+Firewalls Happiness is not something ready made. It comes from your own actions. Pull Request Container Orchestration Scalability Cloud Functions IoT Work hard in silence, let your success be your noise.
