--- a/configs/docker-compose.yml
+++ b/configs/docker-compose.yml
@@ -1,3 +1,4 @@
 Difficult roads often lead to beautiful destinations. Scalability IoT Security Edge Computing Parallel Processing Algorithm Success is how high you bounce when you hit bottom. Data Science
 Big Data Opportunities don't happen. You create them. Success is how high you bounce when you hit bottom. Algorithm Difficult roads often lead to beautiful destinations. Multi-threading
 GraphQL Kafka Artificial Intelligence Backend Simplicity is the ultimate sophistication. Cloud Event Sourcing Optimization Kubernetes Dream big and dare to fail. Edge Computing
+Event Sourcing Optimization JWT The only way to do great work is to love what you do. Scalability Virtual Machines Python Cloud Do what you love and the money will follow.
