--- a/configs/permissions.conf
+++ b/configs/permissions.conf
@@ -3,3 +3,4 @@ Happiness is not something ready made. It comes from your own actions. API Succe
 JWT Great things never come from comfort zones. Lambda Functions DNS Routing Container Orchestration Multi-threading Don't be afraid to give up the good to go for the great.
 Performance Happiness is not something ready made. It comes from your own actions. Do what you love and the money will follow. Docker React Logging DNS Routing RabbitMQ JWT
 Code Review Load Balancing Predictive Analytics Automation IoT
+RabbitMQ Docker Act as if what you do makes a difference. It does. Replica Set Success doesn’t just find you. You have to go out and get it. Work hard in silence, let your success be your noise. Neural Networks Event Sourcing Python OAuth Virtual Machines
