--- a/configs/env.config
+++ b/configs/env.config
@@ -1,1 +1,2 @@
 Server Response Multi-threading Dream big and dare to fail. Data Science Sharding Blockchain JavaScript Innovation distinguishes between a leader and a follower. Backend Neural Networks DNS Routing Database Indexing
+Machine Learning Algorithm NLP Server Response Framework Container Orchestration
