--- a/configs/docker-compose.yml
+++ b/configs/docker-compose.yml
@@ -1,1 +1,2 @@
 Difficult roads often lead to beautiful destinations. Scalability IoT Security Edge Computing Parallel Processing Algorithm Success is how high you bounce when you hit bottom. Data Science
+Big Data Opportunities don't happen. You create them. Success is how high you bounce when you hit bottom. Algorithm Difficult roads often lead to beautiful destinations. Multi-threading
