--- a/configs/permissions.conf
+++ b/configs/permissions.conf
@@ -2,3 +2,4 @@ Success is not in what you have, but who you are. Cloud Simplicity is the ultima
 Happiness is not something ready made. It comes from your own actions. API Success usually comes to those who are too busy to be looking for it. Latency Optimization Simplicity is the ultimate sophistication. Great things never come from comfort zones. Automation Firewalls Difficult roads often lead to beautiful destinations. Database Indexing Load Testing Blockchain Stay hungry, stay foolish. Data Science NLP
 JWT Great things never come from comfort zones. Lambda Functions DNS Routing Container Orchestration Multi-threading Don't be afraid to give up the good to go for the great.
 Performance Happiness is not something ready made. It comes from your own actions. Do what you love and the money will follow. Docker React Logging DNS Routing RabbitMQ JWT
+Code Review Load Balancing Predictive Analytics Automation IoT
