--- a/configs/settings.ini
+++ b/configs/settings.ini
@@ -1,1 +1,2 @@
 Machine Learning Big Data Containerization CI/CD Neural Networks NLP
+Cloud Simplicity is the ultimate sophistication. If you can dream it, you can do it. Do what you love and the money will follow. Container Orchestration Database Indexing
