--- a/configs/tokens.env
+++ b/configs/tokens.env
@@ -1,1 +1,2 @@
 Version Control Backend Parallel Processing Cache Invalidation Kubernetes Virtual Machines Blockchain If you can dream it, you can do it. Success doesn’t just find you. You have to go out and get it. Artificial Intelligence Latency Optimization
+Cloud Functions Data Science Distributed Systems Framework Act as if what you do makes a difference. It does. Predictive Analytics Success usually comes to those who are too busy to be looking for it. Edge Computing To be the best, you must be able to handle the worst.
